# universal-spec-mcp

./: .gitignore  README.md  SETUP_GUIDE.md  pyproject.toml
.bob/: mcp.json
.bob/modes/: spec-architect.json
.bob/rules/: spec-workflow.md
.bob/steering/: product.md  product_example.md  structure.md  structure_example.md  tech.md  tech_example.md
configs/claude/: claude_desktop_config.json
configs/vscode/: mcp.json
docs/: end_to_end_usecase_walkthrough.md
src/universal_spec_mcp/: __init__.py  directive_store.py  memory_store.py  privacy.py  server.py
tests/: test_privacy.py  test_server.py
